Todo: delete game over text onj restart AND restart button restart game -> solve first highscore make restart button make info text class -> jump activated, score +5seconds fix font on controls question
cant split intervals.
 solve refresh restart
 .....

solved info, todo: higscore- cookie
solved highscore

TODO: STYLE  + other

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 
 #game_container{
     width:100%;
-    height: 40%;
+    height: 50%;
 }
 
 #controls_container{
@@ -88,4 +88,10 @@ button{
     transform: translate(-50%, -50%);
     width: 200px;
     height: 50px;
+}
+
+#highscore_container {
+    width: 100%;
+    font-size: large;
+    font-family: Arial;
 }
